--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 <li>
 	<h2><i> Central Intelligence </i></h2>
-	<img src="CI.JFIF " width="190px" height="190px">
+	<img src="CI.jfif " width="190px" height="190px">
 	<p>This is really fun movie to watch when an CIA agent works with his college friend to bust and catch criminals as met after years. </p>
 
 </ol>
 </body>
+
 </html>
