--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	</li>
 	<li> <a href="Second.html">Second Page</a>
 	</li>
-	<li> <a href="Index.html">Movie Review Page</a>
+	<li> <a href="Portfolio.html">Movie Review Page</a>
 	</li>
 	
 	
 </ul>
 
 </body>
+
 </html>
